--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/caco.webp" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
+            <h3 class="estudante-nome">Anderson</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
