--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="image/HANNA.webp" alt="foto do marcelo">
-            <h3 class="estudante-nome">Hanna</h3>
+            <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
+            <h3 class="estudante-nome">Campo</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="image/caco.webp" alt="foto do marcelo">
-            <h3 class="estudante-nome">Anderson</h3>
+            <img class="estudante-imagem" src="image/Cidade.webp" alt="foto do marcelo">
+            <h3 class="estudante-nome">Cidade</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
