--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Campo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.consorcionewholland.com.br%2Fblog%2F5-dicas-para-o-plantio-de-soja&psig=AOvVaw1CmUf2MXi0fDZiuTI5tigh&ust=1750168710203000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMi2j9aM9o0DFQAAAAAdAAAAABAE" alt="icone github"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
