--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Campo</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="image/img plantação.png" alt="icone github">/a>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="image/img plantação.png" alt="icone github"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
