--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Campo</h3>
-            <a href="https://www.coamo.com.br/"><img class="estudante-icone" src="image/img plantação.png" alt="icone github"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.coamo.com.br/"><img class="estudante-icone" src="image/img plantação.png" alt=""></a>
+            <a href="https://www.instagram.com/coamocooperativa/"><img class="estudante-icone" src="instagram.png" alt="instagram Coamo"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Cidade.webp" alt="foto do marcelo">
