--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Campo</h3>
-            <a href="https://www.coamo.com.br/"><img class="estudante-icone" src="image/img plantação.png" alt="Coamo"></a>
+            <a href="https://www.coamo.com.br/"><img class="estudante-icone" src="image/Coamo.webp" alt="Coamo"></a>
             <a href="https://www.cvale.com.br/site"><img class="estudante-icone" src="image/C.Vale.png" alt="C.Vale"></a>
         </div>
         <div class="estudante-div">
