--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Cidade.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Cidade</h3>
-            <a href="https://guarapuava.pr.gov.br/"><img class="estudante-icone" src="github.png" alt="Site Prefeitura"></a>
-            <a href="https://www.instagram.com/guarapuava_pref/"><img class="estudante-icone" src="instagram.png" alt="instragram Prefeitura"></a>
+            <a href="https://guarapuava.pr.gov.br/"><img class="estudante-icone" src="image/prefeitura gurapuava.jpeg" alt="Site Prefeitura"></a>
+            <a href="https://www.instagram.com/guarapuava_pref/"><img class="estudante-icone" src="image/instagram.webp" alt="instragram Prefeitura"></a>
         </div>
        
     </div>
