--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Campo.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Campo</h3>
-            <a href="https://www.coamo.com.br/"><img class="estudante-icone" src="image/Coamo.webp" alt="Coamo"></a>
-            <a href="https://www.cvale.com.br/site"><img class="estudante-icone" src="image/C.Vale.png" alt="C.Vale"></a>
+            <a href="https://www.coamo.com.br/"><img class="Coamo" src="image/Coamo.webp" alt="Coamo"></a>
+            <a href="https://www.cvale.com.br/site"><img class="C.Vale" src="image/C.Vale.png" alt="C.Vale"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="image/Cidade.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Cidade</h3>
-            <a href="https://guarapuava.pr.gov.br/"><img class="estudante-icone" src="image/prefeitura gurapuava.jpeg" alt="Site Prefeitura"></a>
-            <a href="https://www.instagram.com/guarapuava_pref/"><img class="estudante-icone" src="image/instagram.webp" alt="instragram Prefeitura"></a>
+            <a href="https://guarapuava.pr.gov.br/"><img class="site pref" src="image/prefeitura gurapuava.jpeg" alt="Site Prefeitura"></a>
+            <a href="https://www.instagram.com/guarapuava_pref/"><img class="instagram pref" src="image/instagram.webp" alt="instragram Prefeitura"></a>
         </div>
        
     </div>
