--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="estudante-imagem" src="image/Cidade.webp" alt="foto do marcelo">
             <h3 class="estudante-nome">Cidade</h3>
             <a href="https://guarapuava.pr.gov.br/"><img class="site pref" src="image/prefeitura gurapuava.jpeg" alt="Site Prefeitura"></a>
-            <a href="https://www.instagram.com/guarapuava_pref/"><img class="instagram pref" src="image/instagram.webp" alt="instragram Prefeitura"></a>
+            <a href="https://www.instagram.com/guarapuava_pref/"><img class="instagram pref" src="image/Instagram.webp" alt="instragram Prefeitura"></a>
         </div>
        
     </div>
