--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="image/imagem campo.jpg" alt="logo Campo">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Conexão Campo Cidade</li>
+            <li class="cabecalho-lista-item"></li>
         </ul>
     </header>
     <section class="escola">
