--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre O Campo</h2>
             <p class="escola-texto-um">O campo é uma área situada fora dos centros urbanos, geralmente associada à natureza, à agricultura e à criação de animais. É caracterizado por paisagens abertas, presença de vegetação, menor densidade populacional e estilo de vida mais tranquilo e ligado ao meio ambiente. No campo, a economia costuma estar baseada em atividades como a agricultura, a pecuária e o extrativismo.</p>
-            <p class="escola-texto-dois">Endereço: Av. Nossa Sra. Aparecida, s/n, Centro, Turvo  - PR, 85150-000  Telefone:(42) 3642-1210 </p>
+            <p class="escola-texto-dois"></p>
         </div>
         <img class="escola-imagem" src="" alt="colégio">
     </section>
