--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="escola-texto-um">O campo é uma área situada fora dos centros urbanos, geralmente associada à natureza, à agricultura e à criação de animais. É caracterizado por paisagens abertas, presença de vegetação, menor densidade populacional e estilo de vida mais tranquilo e ligado ao meio ambiente. No campo, a economia costuma estar baseada em atividades como a agricultura, a pecuária e o extrativismo.</p>
             <p class="escola-texto-dois"></p>
         </div>
-        <img class="escola-imagem" src="" alt="colégio">
+        <img class="escola-imagem" src="image/vacalo.jpg" alt="colégio">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quer saber mais?</h2>
